--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,23 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
+
+[[bin]]
+name = "server"
+path = "src/bin/server.rs"
+
+
+[[bin]]
+name = "main"
+path = "src/bin/main.rs"
+
+[[bin]] # Bin to run the HelloWorld gRPC server
+name = "gs"
+path = "src/server.rs"
+
 [dependencies]
-tokio = { version = "0.3.1", features = ["full", "tracing"] }
+tokio = { version = "0.3.4", features = ["full", "tracing"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
 tokio-util = { version = "0.5.0", features = ["full"] }
@@ -23,23 +38,45 @@ structopt = "0.3.14"
 dns-lookup = "1.0.5"
 get_local_ip = "0.2.1"
 pnet = "0.26.0"
-tonic = "0.3"
-prost = "0.6"
+tonic = { git = "https://github.com/hawkw/tonic.git",branch = "eliza/tokio-0.3" }
+#hyper = { path = "/home/vic/rust/hyper" }
+#hyper = "0.13.9"
+#pretty_env_logger = "0.4"
+h2 =  { git = "https://github.com/hyperium/h2"}
+env_logger = { version = "0.5.3", default-features = false }
+rustls = "0.18"
+tokio-rustls = "0.20.0"
+webpki = "0.21"
+webpki-roots = "0.17"
+
+
+#tonic = { path = "/home/vic/rust/tonic", features = ["tls"] }
+prost = { git = "https://github.com/danburkert/prost" }
+#tokio = { version = "0.3", features = ["rt-multi-thread", "time", "stream", "fs", "macros", "net"] }
+#futures = { version = "0.3", default-features = false, features = ["alloc"] }
+async-stream = "0.2"
+tower = { git = "https://github.com/tower-rs/tower", version = "0.4" }
+# Required for routeguide
+#serde = { version = "1.0", features = ["derive"] }
+#serde_json = "1.0"
+rand = "0.7"
+# Tracing
+#tracing = "0.1.16"
+#tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
+tracing-attributes = "0.1"
+tracing-futures = "0.2"
+# Required for wellknown types
+prost-types = { git = "https://github.com/danburkert/prost" }
+# Hyper example
+#hyper = { git = "https://github.com/hyperium/hyper", branch = "master" }
+#warp = { version = "0.2", default-features = false }
+#http = "0.2"
+#http-body  = { git = "https://github.com/hyperium/http-body", branch = "master" }
+#pin-project = "0.4.17"
+# Health example
+#tonic-health = { path = "/home/vic/rust/tonic/tonic-health" }
+#listenfd = "0.3"
 
 [build-dependencies]
-tonic-build = "0.3"
-
-[[bin]]
-name = "server"
-path = "src/bin/server.rs"
-
-
-[[bin]]
-name = "main"
-path = "src/bin/main.rs"
-
-[[bin]] # Bin to run the HelloWorld gRPC server
-name = "gs"
-path = "src/server.rs"
-
+tonic-build = { path = "/home/vic/rust/tonic/tonic-build", features = ["prost"] }
 
