--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,9 @@ webpki = "0.21"
 webpki-roots = "0.17"
 
 
+subprocess = "0.2.6"
+
+
 #tonic = { path = "/home/vic/rust/tonic", features = ["tls"] }
 prost = { git = "https://github.com/danburkert/prost" }
 #tokio = { version = "0.3", features = ["rt-multi-thread", "time", "stream", "fs", "macros", "net"] }
