--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ name = "gs"
 path = "src/server.rs"
 
 [dependencies]
+hostname = "^0.3"
 tokio = { version = "0.3.5", features = ["full", "tracing"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
