--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ hostname = "^0.3"
 dirs = "3.0.1"
 tokio = { version = "0.3.5", features = ["full", "tracing"] }
 tracing = "0.1"
-tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
+#tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
 tokio-util = { version = "0.5.0", features = ["full"] }
 bytes = "0.6"
 futures = "0.3.0"
