--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,17 +9,15 @@ edition = "2018"
 
 
 [[bin]]
-name = "server"
-path = "src/bin/server.rs"
+name = "exter_in"
+path = "src/bin/exter_in.rs"
 
 
 [[bin]]
 name = "main"
 path = "src/bin/main.rs"
 
-[[bin]] # Bin to run the HelloWorld gRPC server
-name = "gs"
-path = "src/server.rs"
+
 
 [dependencies]
 hostname = "^0.3"
