--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ pnet = "0.26.0"
 structopt = "0.3.14"
 
 
-tokio = { version = "0.3.5", features = ["full", "tracing"] }
+tokio = { version = "0.3.5", features = ["full"] }
 tokio-util = { version = "0.5.0", features = ["full"] }
 bytes = "0.6"
 futures = "0.3.0"
